# ual-timeliner

./: .gitignore  LICENSE  LICENSE-KSTRIKE  README.md  pyproject.toml  requirements.txt  ual_timeliner.py
resources/: ual-timeliner-opensearch-mapping.json
